[package]
name = "charclass"
version = "0.3.0"
edition = "2024"
description = "Library crate to define and modify unicode character classes"
authors = ["Jan Max Meyer <jmm@phorward.de>"]
repository = "https://github.com/phorward/charclass/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
